# libgravatar

./: .codespellrc  .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5GravatarConfig.cmake.in  KPimGravatarConfig.cmake.in  README.md  REUSE.toml  WARNING.txt  libgravatar.categories  libgravatar.renamecategories  metainfo.yaml
autotests/: CMakeLists.txt  gravatarcachetest.cpp  gravatarcachetest.h  gravatarconfiguresettingsdialogtest.cpp  gravatarconfiguresettingsdialogtest.h  gravatarconfiguresettingswidgettest.cpp  gravatarconfiguresettingswidgettest.h  gravatarconfigwidgettest.cpp  gravatarconfigwidgettest.h  gravatardownloadpixmapdialogtest.cpp  gravatardownloadpixmapdialogtest.h  gravatardownloadpixmapwidgettest.cpp  gravatardownloadpixmapwidgettest.h  gravatarresolvurljobtest.cpp  gravatarresolvurljobtest.h
po/ar/: libgravatar.po  libgravatar6.po
po/ast/: libgravatar.po  libgravatar6.po
po/bg/: libgravatar6.po
po/ca/: libgravatar.po  libgravatar6.po
po/ca@valencia/: libgravatar.po  libgravatar6.po
po/cs/: libgravatar.po  libgravatar6.po
po/da/: libgravatar.po  libgravatar6.po
po/de/: libgravatar.po  libgravatar6.po
po/el/: libgravatar.po  libgravatar6.po
po/en_GB/: libgravatar.po  libgravatar6.po
po/eo/: libgravatar.po  libgravatar6.po
po/es/: libgravatar.po  libgravatar6.po
po/et/: libgravatar.po  libgravatar6.po
po/eu/: libgravatar.po  libgravatar6.po
po/fi/: libgravatar.po  libgravatar6.po
po/fr/: libgravatar.po  libgravatar6.po
po/ga/: libgravatar6.po
po/gl/: libgravatar.po  libgravatar6.po
po/he/: libgravatar6.po
po/hi/: libgravatar.po  libgravatar6.po
po/hu/: libgravatar.po  libgravatar6.po
po/ia/: libgravatar.po  libgravatar6.po
po/ie/: libgravatar6.po
po/is/: libgravatar.po  libgravatar6.po
po/it/: libgravatar.po  libgravatar6.po
po/ja/: libgravatar.po  libgravatar6.po
po/ka/: libgravatar.po  libgravatar6.po
po/ko/: libgravatar.po  libgravatar6.po
po/lt/: libgravatar.po  libgravatar6.po
po/lv/: libgravatar6.po
po/nl/: libgravatar.po  libgravatar6.po
po/nn/: libgravatar.po  libgravatar6.po
po/pl/: libgravatar.po  libgravatar6.po
po/pt/: libgravatar.po  libgravatar6.po
po/pt_BR/: libgravatar.po  libgravatar6.po
po/ro/: libgravatar.po  libgravatar6.po
po/ru/: libgravatar.po  libgravatar6.po
po/sa/: libgravatar.po  libgravatar6.po
po/sk/: libgravatar.po  libgravatar6.po
po/sl/: libgravatar.po  libgravatar6.po
po/sr/: libgravatar.po  libgravatar6.po
po/sr@ijekavian/: libgravatar.po  libgravatar6.po
po/sr@ijekavianlatin/: libgravatar.po  libgravatar6.po
po/sr@latin/: libgravatar.po  libgravatar6.po
po/sv/: libgravatar.po  libgravatar6.po
po/ta/: libgravatar6.po
po/tr/: libgravatar.po  libgravatar6.po
po/ug/: libgravatar6.po
po/uk/: libgravatar.po  libgravatar6.po
po/zh_CN/: libgravatar.po  libgravatar6.po
po/zh_TW/: libgravatar.po  libgravatar6.po
src/: CMakeLists.txt  Messages.sh  gravatar_private_export.h  libgravatar-index.qdoc  libgravatar.qdoc  libgravatar.qdocconf
src/job/: gravatarresolvurljob.cpp  gravatarresolvurljob.h
src/misc/: gravatarcache.cpp  gravatarcache.h  hash.cpp  hash.h
src/settings/: gravatar.kcfg  gravatarsettings.kcfgc
src/widgets/: gravatarconfiguresettingsdialog.cpp  gravatarconfiguresettingsdialog.h  gravatarconfiguresettingswidget.cpp  gravatarconfiguresettingswidget.h  gravatarconfigwidget.cpp  gravatarconfigwidget.h  gravatardownloadpixmapdialog.cpp  gravatardownloadpixmapdialog.h  gravatardownloadpixmapwidget.cpp  gravatardownloadpixmapwidget.h
tests/: CMakeLists.txt  gravatarwidget_gui.cpp
